--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+
 .calculator {
-    height: 500px;
-    width: 300px;
+    height: 70vh;
+    width: 40vh;
     border: 2px solid black;
     display: flex;
     margin: auto;  
-    display: flex;
 }
 
 .display {
