--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,55 @@
 .calculator {
     height: 70vh;
     width: 40vh;
-    border: 2px solid black;
     display: flex;
-    margin: auto;  
+    margin: auto;
+    background-color: rgb(32, 79, 179);
+    border-radius: 3vh; 
+    flex-direction: column; 
 }
 
 .display {
     display: flex;
-    height: 40%;
+    background-color: rgb(249, 255, 196);
+    height: 25%;
     width: 100%;
-    border-bottom: 2px solid black;
+    border: 7px solid rgb(32, 79, 179);
+    border-radius: 3vh;
 }
 
 body {
     min-height: 100vh;
     margin: 0;
     display: flex;
-    justify-content: center;
 }
+
+.numBtns {
+    display: flex;
+    height: 80%;
+    width: 100%;
+    background-color: darkblue;
+    border-bottom-left-radius: 3vh;
+    border-bottom-right-radius: 3vh;
+    justify-content: flex-end;
+}
+
+.operation {
+    height: 100%;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(0, 129, 168);
+    border-bottom-right-radius: 3vh;
+}
+
+.operateBtns {
+    padding: 0px;
+    border: none;
+    background-color: rgb(0, 129, 168);
+    border-radius: 3vh;
+}
+
+.operateBtns:hover {
+    background-color: rgb(0, 100, 131);
+}
+
