--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     display: flex;
 }
 
-.numBtns {
+.btns {
     display: flex;
     height: 80%;
     width: 100%;
@@ -57,3 +57,26 @@ body {
     background-color: rgb(0, 100, 131);
 }
 
+.left {
+    width: 75%;
+    height: 100%;
+    font-size: 0;
+    justify-content: center;
+}
+
+.topBtns {
+    height: 100%;
+    width: calc(100% / 2);
+    font-size: 3vh;
+    background-color: darkblue;
+    color: white;
+    border: none;
+}
+
+button.topBtns:hover {
+    background-color: rgb(0, 0, 100);
+}
+
+button.topLeft:hover {
+    background-color: rgb(0, 0, 100);
+}
