--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,12 @@
     width: 100%;
     border: 7px solid rgb(32, 79, 179);
     border-radius: 3vh;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-right: 1vh;
+    font-size: 6vh;
+    padding-bottom: 2vh;
+    font-family: 'Oxygen Mono', monospace;
 }
 
 body {
@@ -68,15 +74,26 @@ body {
     height: 100%;
     width: calc(100% / 2);
     font-size: 3vh;
-    background-color: darkblue;
+    background-color: rgb(18, 126, 103);
     color: white;
     border: none;
+    border-radius: 3vh;
+}
+
+.bottomBtns {
+    height: 100%;
+    width: calc(100% / 3);
+    background-color: darkblue;
+    border: none;
+    color: white;
+    font-size: 4vh;
+    border-radius: 3vh;
+}
+
+button {
+    cursor: pointer;
 }
 
 button.topBtns:hover {
-    background-color: rgb(0, 0, 100);
-}
-
-button.topLeft:hover {
-    background-color: rgb(0, 0, 100);
+    background-color: rgb(13, 88, 72);
 }
