--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,10 @@ body {
     border: none;
     background-color: rgb(0, 129, 168);
     border-radius: 3vh;
+    height: calc(100% / 5);
+    width: 100%;
+    font-size: 4vh;
+    color: white;
 }
 
 .operateBtns:hover {
@@ -67,7 +71,34 @@ body {
     width: 75%;
     height: 100%;
     font-size: 0;
+}
+
+.leftBtns {
+    height: calc(100% / 3);
+    width: calc(100% / 3);
+    display: inline-flex;
+    background-color: darkblue;
+    border: none;
+    color: white;
+    font-size: 4vh;
+    align-items: center;
     justify-content: center;
+    border-radius: 3vh;
+}
+
+.leftBtns:hover {
+    background-color: rgb(0, 0, 100);
+}
+
+.leftTop {
+    height: 20%;
+    background-color: rgb(18, 126, 103);
+    display: flex;
+}
+
+.leftBottom {
+    height: 20%;
+    display: flex;
 }
 
 .clear {
@@ -90,6 +121,10 @@ body {
     border-radius: 3vh; 
 }
 
+.nums {
+    height: 60%;
+}
+
 .clear:hover {
     background-color: rgb(13, 88, 72);
 }
@@ -106,6 +141,13 @@ body {
     color: white;
     font-size: 4vh;
     border-radius: 3vh;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottomBtns:hover {
+    background-color: rgb(0, 0, 100);
 }
 
 button {
