Change display font family

--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,9 @@
     justify-content: flex-end;
     align-items: flex-end;
     padding-right: 1vh;
-    font-size: 6vh;
+    font-size: 8.5vh;
     padding-bottom: 2vh;
-    font-family: 'Oxygen Mono', monospace;
+    font-family: 'Handjet', cursive;
 }
 
 body {
