--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,20 @@ body {
     color: white;
 }
 
+.equals {
+    height: 20%;
+    padding: 0px;
+    border: none;
+    background-color: rgb(0, 129, 168);
+    border-radius: 3vh;
+    font-size: 4vh;
+    color: white;
+}
+
+.equals:hover {
+    background-color: rgb(0, 100, 131);
+}
+
 .operateBtns:hover {
     background-color: rgb(0, 100, 131);
 }
